db optimization and reset pw
